SERVER-33714 Always drop admin.system.keys collection on downgrade