src/mongo/db/keys_collection_manager_sharding.h
@@ -98,8 +98,7 @@ public:
     void stopMonitoring();
 
     /**
-     * Enable writing new keys to the config server primary. Should only be called if current node
-     * is the config primary.
+     * Enable writing new keys.
      */
     void enableKeyGenerator(OperationContext* opCtx, bool doEnable);
 
